src/test/ui/nll/relate_tys/fn-subtype.stderr
error: higher-ranked subtype error
  --> $DIR/fn-subtype.rs:9:33
   |
LL |     let y: for<'a> fn(&'a ()) = x;
   |                                 ^

error: aborting due to previous error

